--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
+    "particles.js": "^2.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
